# findex-server

./: .gitignore  .gitmodules  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cspell.json  deny.toml  docker-compose-quick-start.yml  docker-compose.yml  rust-toolchain
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/scripts/: build_packages.sh  cargo_build.ps1  cargo_build.sh  cargo_build_and_test.sh  cargo_test.sh  docker-compose-authentication-tests.yml  loop.sh  release.sh  run_test_servers.sh  test_docker_image.sh
.github/workflows/: build_all.yml  build_docker_image.yml  build_generic.yml  build_rhel9.yml  build_windows.yml  clippy.yml  main.yml  main_base.yml  main_release.yml  stress_test.yml
crate/cli/: Cargo.toml  README.md
crate/cli/src/: commands.rs  lib.rs  main.rs
crate/cli/src/actions/: access.rs  console.rs  datasets.rs  login.rs  logout.rs  markdown.rs  mod.rs  new_database.rs  permissions.rs  version.rs
crate/cli/src/actions/findex/: add.rs  add_or_delete.rs  findex_instance.rs  index.rs  index_or_delete.rs  insert_or_delete.rs  instantiated_findex.rs  mod.rs  parameters.rs  search.rs  structs.rs
crate/cli/src/actions/findex_server/: actions.rs  datasets.rs  encrypt_and_index.rs  login.rs  mod.rs  permissions.rs  search_and_decrypt.rs  version.rs
crate/cli/src/actions/findex_server/findex/: findex_instance.rs  insert_or_delete.rs  mod.rs  parameters.rs  search.rs
crate/cli/src/actions/findex_server/tests/: auth_tests.rs  datasets.rs  permissions.rs
crate/cli/src/actions/findex_server/tests/findex/: basic.rs  permissions.rs  utils.rs
crate/cli/src/error/: mod.rs  result.rs
crate/cli/src/tests/: access.rs  auth_tests.rs  datasets.rs  findex.rs  findex_tests.rs  mod.rs  new_database.rs  permissions.rs
crate/cli/src/tests/findex/: add.rs  add_or_delete.rs  basic.rs  index.rs  index_or_delete.rs  mod.rs  permissions.rs  search.rs  tests.rs  utils.rs
crate/cli/src/tests/findex_server/: tests.rs
crate/cli/src/tests/utils/: add_delete_search.rs  cmd_logs.rs  insert_delete_search.rs  mod.rs
crate/client/: Cargo.toml  README.md
crate/client/datasets/: users.json
crate/client/src/: certificate_verifier.rs  config.rs  datasets.rs  file_utils.rs  findex_rest_client.rs  instance.rs  lib.rs  permission.rs  permissions.rs  rest_client.rs  result.rs
crate/client/src/error/: mod.rs  result.rs
crate/client/src/kms/: encryption_layer.rs  memory_adt.rs  requests.rs
crate/client/test_data/configs/: findex.bad  findex.json  findex_partial.json
crate/config/: Cargo.toml  README.md
crate/config/src/: config.rs  error.rs  lib.rs
crate/config/src/error/: mod.rs  result.rs
crate/config/test_data/configs/: findex.bad.json  findex.json  findex_partial.json
crate/findex_client/: Cargo.toml
crate/findex_client/src/: config.rs  datasets.rs  findex_rest_client.rs  lib.rs  permissions.rs  rest_client.rs
crate/findex_client/src/error/: mod.rs
crate/findex_client/src/kms/: encryption_layer.rs  memory_adt.rs  requests.rs
crate/server/: Cargo.toml
crate/server/src/: error.rs  findex_server.rs  lib.rs  main.rs  secret.rs
crate/server/src/config/command_line/: clap_config.rs  db.rs  http_config.rs  jwt_auth_config.rs  mod.rs
crate/server/src/config/params/: db_params.rs  http_params.rs  server_params.rs
crate/server/src/core/: access.rs  findex_server.rs  implementation.rs  mod.rs  permissions.rs
crate/server/src/database/: README.md  database_struct.rs  database_trait.rs  database_traits.rs  error.rs  findex_database.rs  mod.rs  redis.rs
crate/server/src/database/redis/: datasets.rs  findex.rs  instance.rs  mod.rs  permissions.rs
crate/server/src/database/sqlite/: datasets.rs  findex.rs  instance.rs  memory.rs  mod.rs  permissions.rs
crate/server/src/database/test_utils/: mod.rs  permission_tests.rs
crate/server/src/error/: result.rs  server.rs
crate/server/src/middlewares/: jwks.rs  jwt.rs  jwt_token_auth.rs  main.rs  mod.rs  ssl_auth.rs
crate/server/src/routes/: access.rs  datasets.rs  error.rs  findex.rs  mod.rs  permissions.rs  utils.rs  version.rs
crate/server/src/tests/: mod.rs
crate/structs/: Cargo.toml
crate/structs/src/: encrypted_entries.rs  findex_serialization.rs  findex_structs.rs  lib.rs  permissions.rs  uuids.rs
crate/structs/src/error/: mod.rs  result.rs
crate/structs/src/findex/: addresses.rs  bindings.rs  guard.rs  keywords.rs  mod.rs  search_results.rs  tasks.rs  tests.rs  value.rs  words.rs
crate/test_findex_server/: Cargo.toml
crate/test_findex_server/src/: lib.rs  test_server.rs
crate/test_server/: Cargo.toml  README.md
crate/test_server/certificates/: README.md  generate_certs.sh
crate/test_server/src/: lib.rs  test_jwt.rs  test_server.rs
documentation/: README.md  includes.yml  mkdocs.yml
documentation/docs/: authentication.md  authorization.md  configuration.md  database.md  index.md  quick_start.md  quick_start_client.md  usage.md
pkg/: cosmian_findex_server.service  findex_server.toml
pkg/deb/: postinst  postrm
pkg/rpm/: scriptlets.toml
src/: api.rs  error.rs  findex_backend.rs  findex_server.rs  lib.rs  log_utils.rs  main.rs  mod.rs  result.rs  secret.rs
src/common/: app_state.rs  env.rs  mod.rs
src/config/command_line/: db.rs  http_config.rs  jwt_auth_config.rs  workspace.rs
src/config/params/: http_params.rs  server_params.rs
src/core/: findex_server.rs
src/database/: mod.rs
src/database/redis/: mod.rs
src/database/sqlite/: mod.rs
src/middlewares/: README.md  authMiddleware.rs  auth_middleware.rs  error.rs  jwks.rs  jwt.rs  jwt_token_auth.rs  main.rs  mod.rs  ssl_auth.rs  types.rs
src/routes/: health_route.rs  mod.rs
src/services/: health.rs  mod.rs
src/tests/: mod.rs
test_data/certificates/: README.md  generate_certs.sh
test_data/certificates/owner/: owner.client.acme.com.crt  (+2 more)
test_data/client_server/: generate_certs.sh
test_data/configs/: findex.bad.json  findex.bad.toml  findex.toml  findex_partial.toml
(+14 files in other folders)
