[workspace]
default-members = ["crate/server"]
members = [
  "crate/cli",
  "crate/findex_client",
  "crate/structs",
  "crate/server",
  "crate/test_findex_server",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
  "Emmanuel Coste<emmanuel.coste@cosmian.com>",
  "Hatem M'naouer <hatem.mnaouer@cosmian.com>",
]
license = "BUSL-1.1"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/cosmian_findex_server"
keywords = ["findex", "cosmian"]
categories = ["security"]

[profile.release]
lto = true
strip = true

[profile.dev]
strip = "debuginfo"
incremental = false

# proc-macros and build-scripts
[profile.dev.build-override]
strip = "debuginfo"
incremental = false

# external dependencies
[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]

actix-server = { version = "2.5", default-features = false }
actix-web = { version = "4.9", default-features = false }
async-sqlite = { version = "0.4" }
base64 = "0.22"
clap = { version = "4.5", default-features = false }
cosmian_config_utils = "0.2"
cosmian_crypto_core = { version = "10.1", default-features = false }
cosmian_findex_memories = { git = "https://github.com/Cosmian/findex", branch = "feat/findex_workspace", features = [
  "redis-mem",
  "sqlite-mem",
] }
cosmian_http_client = "0.2"
cosmian_kms_cli = { git = "https://github.com/Cosmian/kms", branch = "develop" }
cosmian_logger = "0.2"
der = { version = "0.7", default-features = false }
hex = "0.4"
leb128 = "0.2"
num-format = "0.4"
openssl = { version = "0.10", default-features = false }
pem = "3.0"
reqwest = { version = "0.11", default-features = false }
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.27", default-features = false }
tempfile = "3.17"
thiserror = "2.0"
tokio = { version = "1.43", default-features = false }
tracing = "0.1"
url = "2.5"
uuid = { version = "=1.11.1", features = ["v4", "serde"] }
x509-cert = { version = "0.2", default-features = false }
x509-parser = "0.17"
zeroize = { version = "1.8", default-features = false }
