[package]
name = "cosmian_findex_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI used to manage the Cosmian Findex."

[[bin]]
name = "cosmian_findex_cli"
path = "src/main.rs"
test = false

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = [
  "help",
  "env",
  "std",
  "usage",
  "error-context",
  "derive",
  "cargo",
] }
cosmian_config_utils = { workspace = true }
cosmian_crypto_core = { workspace = true }
cosmian_findex = { workspace = true }
cosmian_findex_client = { path = "../client" }
cosmian_findex_structs = { path = "../structs" }
cosmian_logger = { workspace = true }
csv = "1.3.1"
hex = "0.4"
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
actix-rt = "2.10"
actix-server = { workspace = true }
assert_cmd = "2.0"
const-oid = { version = "0.9", features = ["db"] }
openssl = { workspace = true }
predicates = "3.1"
regex = { version = "1.11", default-features = false }
tempfile = { workspace = true }
test_findex_server = { path = "../test_server" }
x509-parser = { workspace = true, features = ["verify"] }
