[package]
name = "cosmian_findex_cli"
version = "0.4.10"
authors.workspace = true
categories = ["security"]
edition.workspace = true
keywords = ["findex", "findex-server", "cosmian"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = """
Command Line Interface used to manage the Findex server.

If any assistance is needed, please either visit the Cosmian technical documentation at https://docs.cosmian.com
or contact the Cosmian support team on Discord https://discord.com/invite/7kPMNtHpnz
"""

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
non-fips = [
  "cosmian_findex_client/non-fips",
  "cosmian_kms_cli/non-fips",
  "test_findex_server/non-fips",
  "test_kms_server/non-fips",
]

[dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = [
  "help",
  "env",
  "std",
  "usage",
  "error-context",
  "derive",
  "cargo",
] }
cosmian_config_utils = { workspace = true }
cosmian_findex = { workspace = true, features = ["test-utils"] }
cosmian_findex_client = { path = "../findex_client", version = "0.4.10" }
cosmian_findex_structs = { path = "../structs", version = "0.4.10" }
cosmian_kms_cli = { workspace = true }
cosmian_logger = { workspace = true }
cosmian_sse_memories = { workspace = true }
csv = "1.3.1"
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
cosmian_sse_memories = { workspace = true, features = ["test-utils"] }
test_findex_server = { path = "../test_findex_server" }
test_kms_server = { workspace = true }
