[package]
name = "cosmian_findex_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
cosmian_findex_config = { path = "../config" }
cosmian_findex_structs = { path = "../structs" }
cosmian_findex_server = { path = "../server" }
cosmian_http_client = { workspace = true }
reqwest = { workspace = true, features = ["default", "json", "native-tls"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
cosmian_findex = { workspace = true }
rand_chacha = "0.3.1"
cosmian_crypto_core = { workspace = true }
