[package]
name = "cosmian_findex_client"
version = "0.4.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian Findex REST Client"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
non-fips = ["cosmian_kms_cli/non-fips", "test_kms_server/non-fips"]

[dependencies]
base64 = { workspace = true }
cosmian_findex = { workspace = true }
cosmian_findex_structs = { path = "../structs", version = "0.4.2" }
cosmian_http_client = "0.4"
cosmian_kms_cli = { workspace = true }
cosmian_logger = { workspace = true }
cosmian_sse_memories = { workspace = true, features = ["redis-mem"] }
reqwest = { workspace = true, features = ["default", "json", "native-tls"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cosmian_findex = { workspace = true, features = ["test-utils"] }
cosmian_sse_memories = { workspace = true, features = ["test-utils"] }
test_kms_server = { workspace = true }
tokio = { workspace = true }
