[package]
name = "cosmian_findex_server"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian Findex server"

[[bin]]
name = "cosmian_findex_server"
path = "src/main.rs"
test = false

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
# Do not verify auth0 token expiration date and https ssl is auto-signed (to avoid to be banned by letsencrypt)
insecure = []

[dependencies]
actix-cors = "0.6"
actix-identity = "0.6"
actix-service = "2.0"
actix-tls = "3.4"
actix-web = { workspace = true, features = ["macros", "openssl"] }
alcoholic_jwt = "4091"
async-trait = "0.1.83"
chrono = "0.4"
clap = { workspace = true, features = [
  "help",
  "env",
  "std",
  "usage",
  "error-context",
  "derive",
  "cargo",
] }
cloudproof_findex = { workspace = true, features = ["redis-interface"] }
cosmian_findex_structs = { path = "../structs" }
cosmian_logger = { workspace = true }
dotenvy = "0.15"
futures = "0.3"
openssl = { workspace = true, default-features = false }
redis = { version = "0.27", features = [
  "aio",
  "ahash",
  "script",
  "connection-manager",
  "tokio-comp",
  "r2d2",
] }
# Important: align the rustls version with reqwest rustls dependency
# When using client certificate authentication, reqwest will use the
# native-tls crate to create an Identity; this will be different backend
# implementations depending on the operating system. On linux, it will
# use openssl
# The default features is to guarantee that the native-tls crate will be used
reqwest = { workspace = true, features = ["default", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.2", default-features = false, features = [
  "json",
  "runtime-tokio-native-tls",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = "0.8"
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
