[package]
name = "cosmian_findex_structs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
base64 = { workspace = true }
cosmian_crypto_core = { workspace = true, features = ["ser"] }
cosmian_findex = { workspace = true, features = ["test-utils"] }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rand = "0.9.0"
