[package]
name = "cosmian_findex_structs"
version = "0.4.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian Findex server structs"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
base64 = { workspace = true }
cosmian_crypto_core = { workspace = true, features = ["ser"] }
cosmian_findex = { workspace = true }
cosmian_sse_memories = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
