[package]
name = "test_findex_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Run a test Findex server for testing purposes"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
non-fips = ["cosmian_findex_client/non-fips"]

[dependencies]
actix-server = { workspace = true }
cosmian_findex_client = { path = "../findex_client", version = "0.4.0" }
cosmian_findex_server = { path = "../server", features = [
  "insecure",
], version = "0.4.0" }
cosmian_logger = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
